Edit activity_name_6 text

--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -10,7 +10,7 @@
     <string name="activity_name_3"> لعب كرة قدم</string>
     <string name="activity_name_4">زيارة المتحف</string>
     <string name="activity_name_5">التنزه</string>
-    <string name="activity_name_6">الاكل في للمطعم</string>
+    <string name="activity_name_6">الاكل في المطعم</string>
     <string name="activity_name_7">جري</string>
     <string name="activity_name_8">تسوق</string>
     <string name="activity_name_9">سباحة</string>
